fixed toolbar layout on mobile view

--- a/manager/static/css/main.css
+++ b/manager/static/css/main.css
@@ -8,6 +8,10 @@ body {
     justify-content: space-between;
 }
 
+.total-reservations {
+    width: fit-content;
+}
+
 .title {
     text-align: center;
     border-bottom: 2px solid dodgerblue;
@@ -217,10 +221,6 @@ body {
 
     .title {
         font-size: 2.0rem;
-    }
-
-    .toolbar {
-        flex-direction: column;
     }
 
     .mobile-hidden {
